--- a/pages/admin/dataUsers/alumni/create.html
+++ b/pages/admin/dataUsers/alumni/create.html
@@ -78,10 +78,10 @@
                                     <a href="#" class="submenu-link">Alumni</a>
                                     <ul class="submenu submenu-level-2">
                                         <li class="submenu-item active">
-                                            <a href="create.html" class="submenu-link">Create</a>
+                                            <a href="create.html" class="submenu-link">Import Data</a>
                                         </li>
                                         <li class="submenu-item ">
-                                            <a href="read.html" class="submenu-link">Read</a>
+                                            <a href="read.html" class="submenu-link">Tampil Data</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -89,10 +89,10 @@
                                     <a href="#" class="submenu-link">Perusahaan</a>
                                     <ul class="submenu submenu-level-2">
                                         <li class="submenu-item ">
-                                            <a href="../perusahaan/create.html" class="submenu-link">Create</a>
+                                            <a href="../perusahaan/create.html" class="submenu-link">Tambah Data</a>
                                         </li>
                                         <li class="submenu-item ">
-                                            <a href="../perusahaan/read.html" class="submenu-link">Read</a>
+                                            <a href="../perusahaan/read.html" class="submenu-link">Tampil Data</a>
                                         </li>
                                     </ul>
                                 </li>
