--- a/pages/admin/dataUsers/perusahaan/edit.html
+++ b/pages/admin/dataUsers/perusahaan/edit.html
@@ -82,10 +82,10 @@
                                     <a href="#" class="submenu-link">Alumni</a>
                                     <ul class="submenu submenu-level-2">
                                         <li class="submenu-item">
-                                            <a href="../alumni/create.html" class="submenu-link">Create</a>
+                                            <a href="../alumni/create.html" class="submenu-link">Import Data</a>
                                         </li>
                                         <li class="submenu-item ">
-                                            <a href="../alumni/read.html" class="submenu-link">Read</a>
+                                            <a href="../alumni/read.html" class="submenu-link">Tampil Data</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -93,10 +93,10 @@
                                     <a href="#" class="submenu-link">Perusahaan</a>
                                     <ul class="submenu submenu-level-2">
                                         <li class="submenu-item">
-                                            <a href="create.html" class="submenu-link">Create</a>
+                                            <a href="create.html" class="submenu-link">Tambah Data</a>
                                         </li>
                                         <li class="submenu-item active">
-                                            <a href="read.html" class="submenu-link">Read</a>
+                                            <a href="read.html" class="submenu-link">Tampil Data</a>
                                         </li>
                                     </ul>
                                 </li>
