--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -79,10 +79,10 @@
                   <a href="#" class="submenu-link">Alumni</a>
                   <ul class="submenu submenu-level-2">
                     <li class="submenu-item ">
-                      <a href="dataUsers/alumni/create.html" class="submenu-link">Create</a>
+                      <a href="dataUsers/alumni/create.html" class="submenu-link">Import Data</a>
                     </li>
                     <li class="submenu-item ">
-                      <a href="dataUsers/alumni/read.html" class="submenu-link">Read</a>
+                      <a href="dataUsers/alumni/read.html" class="submenu-link">Tampil Data</a>
                     </li>
                   </ul>
                 </li>
@@ -90,10 +90,10 @@
                   <a href="#" class="submenu-link">Perusahaan</a>
                   <ul class="submenu submenu-level-2">
                     <li class="submenu-item ">
-                      <a href="dataUsers/perusahaan/create.html" class="submenu-link">Create</a>
+                      <a href="dataUsers/perusahaan/create.html" class="submenu-link">Tambah Data</a>
                     </li>
                     <li class="submenu-item ">
-                      <a href="dataUsers/perusahaan/read.html" class="submenu-link">Read</a>
+                      <a href="dataUsers/perusahaan/read.html" class="submenu-link">Tampil Data</a>
                     </li>
                   </ul>
                 </li>
