--- a/pages/admin/dataTahunan.html
+++ b/pages/admin/dataTahunan.html
@@ -7,7 +7,8 @@
   <title>Dashboard - Karier Sebelas</title>
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"> <!-- css assets  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <!-- css assets  -->
   <link rel="stylesheet" href="../../assets/css/app.css" />
   <link rel="stylesheet" href="../../assets/css/themes/dark/app-dark.css" />
   <!-- end css assets  -->
