--- a/pages/perusahaan/dataTahunan.html
+++ b/pages/perusahaan/dataTahunan.html
@@ -177,7 +177,57 @@
                 </div>
               </div>
               <div class="card-body">
-                <div id="chart"></div>
+                <!-- <div id="chart"></div> -->
+                <h5>Jumlah Lamaran Diajukan:</h5>
+                <p>Total lamaran kerja yang diajukan oleh semua pengguna dalam periode Januari hingga Juni 2024 adalah
+                  150 lamaran.</p>
+
+                <h5>Rincian Lamaran:</h5>
+                <ul>
+                  <li>Data Analyst: 30 lamaran</li>
+                  <li>UI/UX Designer: 25 lamaran</li>
+                  <li>Software Engineer: 20 lamaran</li>
+                </ul>
+
+                <h5>Perusahaan Paling Dituju:</h5>
+                <ul>
+                  <li>Tech Innovators: 40 lamaran</li>
+                  <li>Creative Solutions: 35 lamaran</li>
+                  <li>Future Tech: 25 lamaran</li>
+                </ul>
+
+                <h5>Statistik Lamaran:</h5>
+                <ul>
+                  <li>Lamaran Diterima: 60 lamaran</li>
+                  <li>Lamaran Ditolak: 50 lamaran</li>
+                  <li>Lamaran Pending: 40 lamaran</li>
+                </ul>
+
+                <h5>Rincian Status Lamaran:</h5>
+                <h6>Lamaran yang Diterima:</h6>
+                <p>60 lamaran diterima, dengan mayoritas diterima di posisi UI/UX Designer dan Data Analyst.</p>
+                <p>Contoh Perusahaan: Creative Solutions menerima 20 lamaran untuk posisi UI/UX Designer.</p>
+
+                <h6>Lamaran yang Ditolak:</h6>
+                <p>50 lamaran ditolak, dengan mayoritas ditolak untuk posisi Software Engineer dan Marketing Specialist.
+                </p>
+                <p>Contoh Perusahaan: Future Tech menolak 15 lamaran untuk posisi Software Engineer.</p>
+
+                <h6>Lamaran yang Pending:</h6>
+                <p>40 lamaran masih dalam status pending, dengan mayoritas lamaran untuk posisi Data Analyst dan Product
+                  Manager.</p>
+                <p>Contoh Perusahaan: Tech Innovators masih memproses 15 lamaran untuk posisi Data Analyst.</p>
+
+                <h5>Ringkasan:</h5>
+                <p>Dalam periode ini, pengguna aktif mengajukan lamaran kerja ke berbagai posisi dan perusahaan. Posisi
+                  yang paling diminati adalah Data Analyst dan UI/UX Designer, sementara Tech Innovators menjadi
+                  perusahaan yang paling banyak menerima lamaran.</p>
+                <p>Dari total 150 lamaran yang diajukan, 60 lamaran diterima, 50 lamaran ditolak, dan 40 lamaran masih
+                  pending.</p>
+                <p>Ini menunjukkan peluang yang baik dalam bidang desain dan analisis data, sementara bidang seperti
+                  pengembangan perangkat lunak dan pemasaran memiliki tingkat penolakan yang lebih tinggi. Pengguna
+                  mungkin perlu meningkatkan keterampilan atau memenuhi persyaratan lebih lanjut untuk posisi dengan
+                  tingkat penolakan yang tinggi.</p>
               </div>
             </div>
             <!-- end main content -->
